Fix T55568: second click event ignored