source/blender/windowmanager/intern/wm_event_system.c
@@ -2327,6 +2327,7 @@ static int wm_handlers_do(bContext *C, wmEvent *event, ListBase *handlers)
 					}
 				}
 				else if (event->val == KM_DBL_CLICK) {
+					/* The underlying event is a press, so try and handle this. */
 					event->val = KM_PRESS;
 					action |= wm_handlers_do_intern(C, event, handlers);
 
@@ -3569,7 +3570,7 @@ void wm_event_add_ghostevent(wmWindowManager *wm, wmWindow *win, int type, int U
 			/* if previous event was same type, and previous was release, and now it presses... */
 			if (wm_event_is_double_click(&event, evt)) {
 				CLOG_INFO(WM_LOG_HANDLERS, 1, "Send double click");
-				evt->val = event.val = KM_DBL_CLICK;
+				event.val = KM_DBL_CLICK;
 			}
 
 			/* this case happens on holding a key pressed, it should not generate
